fix: remove fields and change label based on selected category

--- a/prime_admin/templates/lms/add_expenses_modal.html
+++ b/prime_admin/templates/lms/add_expenses_modal.html
@@ -54,19 +54,19 @@
                             </div>
                             <div class="form-row">
                                 <div class="col-md-6">
-                                    <div class="position-relative form-group"><label for="account_no" class="">Account
+                                    <div class="position-relative form-group"><label id="lbl_account_no" for="account_no" class="">Account
                                             No. / Particular</label><input name="account_no" id="account_no" type="text"
                                             class="form-control" required></div>
                                 </div>
                                 <div class="col-md-3">
-                                    <div class="position-relative form-group"><label for="billing_month_from"
+                                    <div class="position-relative form-group"><label id="lbl_billing_month_from" for="billing_month_from"
                                             class="">Billing Month From</label>
                                         <input name="billing_month_from" id="billing_month_from" type="date"
                                             class="form-control" required>
                                     </div>
                                 </div>
                                 <div class="col-md-3">
-                                    <div class="position-relative form-group"><label for="billing_month_to"
+                                    <div class="position-relative form-group"><label id="lbl_billing_month_to" for="billing_month_to"
                                             class="">Billing Month To</label>
                                         <input name="billing_month_to" id="billing_month_to" type="date"
                                             class="form-control" required>
