--- a/prime_admin/templates/lms/add_funds_modal.html
+++ b/prime_admin/templates/lms/add_funds_modal.html
@@ -71,8 +71,8 @@
                                             type="text" class="form-control"></div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="position-relative form-group"><label for="account_no"
-                                            class="">Account Number</label><input disabled name="account_no" id="account_no"
+                                    <div class="position-relative form-group"><label for="fund_account_no"
+                                            class="">Account Number</label><input disabled name="account_no" id="fund_account_no"
                                             type="text" class="form-control">
                                        </div>
                                 </div>
