feat: change supplies reference to the new tables

--- a/prime_admin/templates/lms/inbound_modal.html
+++ b/prime_admin/templates/lms/inbound_modal.html
@@ -9,7 +9,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form action="{{url_for('lms.inbound_supply')}}" method="POST" class="needs-validation" novalidate>
+                <form action="{{url_for(TABLE_OPTIONS['inbound_url'])}}" method="POST" class="needs-validation" novalidate>
                     <div class="main-card mb-3 card">
                         <div class="card-body">
                         <h5 class="card-title">Material Information</h5>
