--- a/prime_admin/templates/lms/office_supplies_page.html
+++ b/prime_admin/templates/lms/office_supplies_page.html
@@ -24,7 +24,7 @@
                 "data": function (d) {
                     d.year = $("#filter_year").val();
                     d.month = $("#filter_month").val();
-                    d.supplies_type = "supplies";
+                    d.supplies_type = "office_supplies";
                 }
             },
             "pageLength": 50,
@@ -48,7 +48,7 @@
                 "data": function (d) {
                     d.year = $("#filter_year").val();
                     d.month = $("#filter_month").val();
-                    d.supplies_type = "supplies";
+                    d.supplies_type = "office_supplies";
                 }
             },
             "pageLength": 50,
