feat: improve internal server error message

--- a/app/admin/templates/admin/internal_server_error.html
+++ b/app/admin/templates/admin/internal_server_error.html
@@ -127,8 +127,9 @@
 			<div class="notfound-404">
 				<h1>500</h1>
 			</div>
-			<h2>Internal Server Error!</h2>
-			<p>Please refresh the page</p>
+			<h2>Well, this is unexpected...</h2>
+			<p>An error has occured and we're working to fix the problem! We'll be up and running shortly</p>
+			<p>If you need immediate help please message the administrator</p>
 		</div>
 	</div>
 
