feat: supplies rearrange columns add completing and reserve

--- a/prime_admin/templates/lms/student_supplies_page.html
+++ b/prime_admin/templates/lms/student_supplies_page.html
@@ -184,6 +184,9 @@
                                     <tr>
                                         <th class="text-center">ID</th>
                                         <th class="text-center">DESCRIPTION</th>
+                                        <th class="text-center">COMPLETING</th>
+                                        <th class="text-center">MAINTAINING</th>
+                                        <th class="text-center">UOM</th>
                                         <th class="text-center">1</th>
                                         <th class="text-center">2</th>
                                         <th class="text-center">3</th>
@@ -200,6 +203,7 @@
                                         <th class="text-center">14</th>
                                         <th class="text-center">15</th>
                                         <th class="text-center">16</th>
+                                        <th class="text-center">17</th>
                                         <th class="text-center">18</th>
                                         <th class="text-center">19</th>
                                         <th class="text-center">20</th>
@@ -230,11 +234,8 @@
                                         <th class="text-center">ID</th>
                                         <th class="text-center"></th>
                                         <th class="text-center">DESCRIPTION</th>
-                                        <th class="text-center">UOM</th>
                                         <th class="text-center">REMAINING MATERIALS</th>
-                                        <th class="text-center">MAINTANING MATERIALS</th>
-                                        <th class="text-center">UNIT PRICE</th>
-                                        <th class="text-center">TOTAL</th>
+                                        <th class="text-center">REPLACEMENT MATERIALS</th>
                                     </tr>
                                 </thead>
                                 <tbody>
